--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
+<html>
+    
 <title>
     About
 </title>
 <link rel ="stylesheet" type = "text/css" href="style.css"/>
+    <body>
 <div class = "header">
     <img src="Prime TV.jpg" width=100 height=100/> 
   <h1>
@@ -68,3 +71,5 @@ your convenience.(Prime TV App is also available)
     <img src="youtube.png" width=50 height=50/>
     </a>
     </div> 
+        </body>
+</html>
